--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo-google-fonts/oswald": "^0.2.3",
-    "expo": "~51.0.14",
+    "expo": "^51.0.17",
     "expo-font": "~12.0.7",
     "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
+    "install": "^0.13.0",
+    "npx": "^10.2.2",
+    "react": "^18.2.0",
     "react-native": "0.74.2",
     "react-native-paper": "^5.12.3",
-    "styled-components": "^6.1.11"
+    "react-native-svg": "15.2.0",
+    "styled-components": "5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
