--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo-google-fonts/oswald": "^0.2.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^5.11.15",
+    "@react-navigation/native": "^5.9.8",
     "expo": "^51.0.17",
     "expo-font": "~12.0.7",
     "expo-status-bar": "~1.12.1",
     "npx": "^10.2.2",
     "react": "^18.2.0",
     "react-native": "0.74.2",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "styled-components": "5.3.5"
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
