--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.15",
     "@react-navigation/native": "^5.9.8",
+    "camelize": "^1.0.1",
     "expo": "^51.0.17",
     "expo-font": "~12.0.7",
     "expo-status-bar": "~1.12.1",
