--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-webview": "13.8.6",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "lottie-react-native": "6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
