--- a/package.json
+++ b/package.json
@@ -18,23 +18,24 @@
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
     "camelize": "^1.0.1",
-    "expo": "^51.0.17",
-    "expo-font": "~12.0.7",
+    "expo": "~51.0.24",
+    "expo-font": "~12.0.9",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.4",
+    "lottie-react-native": "6.7.0",
     "npx": "^10.2.2",
-    "react": "^18.2.0",
-    "react-native": "0.74.2",
+    "react": "18.2.0",
+    "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-webview": "13.8.6",
     "styled-components": "^6.1.11",
-    "lottie-react-native": "6.7.0"
+    "expo-camera": "~15.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
